<resources>
    <string name="app_name">Re-Assure</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">UserName</string>
    <string name="prompt_password">*******</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tv_forgot_link"><u>Forgot Your Password?</u></string>
    <string name="tv_forgot_title">Forgot Password</string>
    <string name="email_id">Email Id</string>
    <string name="bt_submit">Submit</string>
    <string name="permission_msg">Please provide permission</string>
    <string name="permission_denied_msg">permission denied</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sunday_text">Sun</string>
    <string name="monday_text">Mon</string>
    <string name="tuesday_text">Tue</string>
    <string name="wednesday_text">Wed</string>
    <string name="thursday_text">Thu</string>
    <string name="friday_text">Fri</string>
    <string name="saturday_text">Sat</string>
    <string name="no_events">No events</string>
    <string name="invalid_attribute">Failed to create Calendar,\n\n invalid value of Attributes!,\n Please review &amp; try again!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_dash_pending">Pending</string>
    <string name="tv_dash_completed">Completed</string>
    <string name="tv_upcoming_visit">Upcoming Visits</string>
    <string name="dash">Dashboard</string>
    <string name="pend">Pending</string>
    <string name="draft">Draft</string>
    <string name="comp">Completed</string>
    <string name="hyperlink"><u>Enter Manually</u></string>
</resources>
