<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/rlMonthTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:gravity="center"
        android:weightSum="3"
        android:layout_gravity="center"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

           android:layout_toLeftOf="@+id/title">

            <ImageView
                android:id="@+id/MonthName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_arrow_left"
                android:visibility="visible" />


        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="March"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"

            android:textColor="@color/calendar_month_text"
            android:textSize="@dimen/_18sdp"

            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:layout_toRightOf="@+id/title">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/ic_arrow_right"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#eeeff1"
        android:layout_below="@+id/title"/>
    <LinearLayout
        android:id="@+id/llDayList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="7">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunday_text"
            android:textStyle="bold"
            android:textColor="@color/calendar_month_text"
            android:textSize="@dimen/h5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday_text"
            android:textStyle="bold"

            android:textColor="@color/calendar_month_text"
            android:textSize="@dimen/h5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesday_text"
            android:textStyle="bold"

            android:textColor="@color/calendar_month_text"
            android:textSize="@dimen/h5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday_text"
            android:textStyle="bold"

            android:textColor="@color/calendar_month_text"
            android:textSize="@dimen/h5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursday_text"
            android:textStyle="bold"

            android:textColor="@color/calendar_month_text"
            android:textSize="@dimen/h5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday_text"
            android:textStyle="bold"

            android:textColor="@color/calendar_month_text"
            android:textSize="@dimen/h5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saturday_text"
            android:textStyle="bold"

            android:textColor="@color/calendar_month_text"
            android:textSize="@dimen/h5" />


    </LinearLayout>

    <GridView
        android:id="@+id/gvCurrentMonthDayList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:listSelector="@android:color/transparent"
        android:numColumns="7"
        android:stretchMode="columnWidth"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>