<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:weightSum="2">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1.15">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/reassurelogoone4"/>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.85"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/my_edit_text_border">

            <ImageView
                android:id="@+id/iv_pass_login"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:adjustViewBounds="true"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user"/>


            <TextView
                android:layout_width="1dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/iv_pass_login"
                android:background="@color/colordivider"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editHeightSize"
        android:layout_centerVertical="true"
        android:background="@null"
        android:hint="@string/prompt_email"
        android:inputType="text"
        android:paddingLeft="70dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textSize="@dimen/editTextSize"/>

        </RelativeLayout>


        <Button
            android:id="@+id/btnOTP"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/login_btn_bg_round_corner"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Generate OTP"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:visibility="visible" />




        <RelativeLayout
            android:id="@+id/rel_pass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:background="@drawable/my_edit_text_border">

        <ImageView
            android:id="@+id/iv_user_login"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:adjustViewBounds="true"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_pass"/>
            <TextView
                android:layout_width="1dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/iv_user_login"
                android:background="@color/colordivider"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editHeightSize"
        android:layout_centerVertical="true"
        android:background="@null"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingLeft="70dp"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/editTextSize"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_btn_bg_round_corner"
            android:text="@string/action_sign_in"
            android:visibility="gone"
            android:textColor="@color/colorWhite" />

        <com.luminous.pdi.custom_text_view.TextViewSemiBold
            android:id="@+id/txtForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/tv_forgot_link"
            android:textColor="@color/colortext"
            android:textSize="18sp"/>


    </LinearLayout>
  <!-- -->
</LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>



</RelativeLayout>



</layout>