<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.forgot.ForgotPasswordActivity">


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:weightSum="3">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:gravity="center"
           android:layout_weight="1">

           <ImageView

               android:layout_width="wrap_content"
               android:layout_height="60dp"
               android:adjustViewBounds="true"
               android:layout_gravity="center"
               android:scaleType="fitXY"
               android:src="@drawable/logo"/>

       </LinearLayout>



       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:gravity="bottom"
           android:layout_weight="1"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:orientation="vertical">



           <com.luminous.pdi.custom_text_view.TextViewSemiBold
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:layout_centerInParent="true"
               android:text="@string/tv_forgot_title"
              android:layout_gravity="center"
               android:textColor="#0E4F9F"
               android:textStyle="bold"
               android:id="@+id/tv_forgotpassword"
               android:textSize="25dp"
               android:layout_marginBottom="25dp"/>

           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:layout_marginTop="15dp"
               android:background="@drawable/my_edit_text_border">

               <ImageView
                   android:id="@+id/iv_email_forgot"
                   android:layout_width="25dp"
                   android:layout_height="25dp"
                   android:layout_alignParentLeft="true"
                   android:layout_centerVertical="true"
                   android:layout_marginLeft="15dp"
                   android:adjustViewBounds="true"
                   android:padding="5dp"
                   android:scaleType="centerCrop"
                   android:src="@drawable/email_icon"/>
               <TextView
                   android:layout_width="1dp"
                   android:layout_height="25dp"
                   android:layout_centerVertical="true"
                   android:layout_margin="5dp"
                   android:layout_toRightOf="@+id/iv_email_forgot"
                   android:background="@color/colordivider"/>

               <EditText
                   android:id="@+id/userEmail"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/editHeightSize"
                   android:layout_centerVertical="true"
                   android:background="@null"
                   android:hint="@string/email_id"
                   android:imeOptions="actionDone"
                   android:inputType="textEmailAddress"
                   android:paddingLeft="70dp"
                   android:selectAllOnFocus="true"
                   android:textSize="@dimen/editTextSize"/>
           </RelativeLayout>

           <Button
               android:id="@+id/btnSub"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:layout_marginTop="15dp"
               android:background="@drawable/button_bg_rounded_corners"
               android:text="@string/bt_submit"
               android:textColor="@color/colorWhite"/>

       </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:gravity="center"
           android:layout_weight="1"
           android:orientation="vertical">

           <com.luminous.pdi.custom_text_view.TextViewRegular
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="Already have an account?"
               android:layout_below="@+id/btn_submit"
               android:textAlignment="center"
               android:textColor="#C2BEBE"
               android:textSize="@dimen/normalTextSize"
               android:id="@+id/tv_haveaccount"
               />

           <com.luminous.pdi.custom_text_view.TextViewRegular
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Click Here"
               android:textColor="#083583"
               android:id="@+id/tv_forgotclickhere"
               android:textSize="@dimen/normalTextSize"/>

       </LinearLayout>


   </LinearLayout>





    <ProgressBar
        android:id="@+id/pbLoadingForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>
</layout>