<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/_2sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <com.luminous.pdi.custom_text_view.TextViewRegular
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/padding_10"
                        android:text="Hello"
                        android:textColor="@color/black_overlay"
                        android:textSize="@dimen/TextSizeLarg"
                        android:textStyle="normal" />

                    <com.luminous.pdi.custom_text_view.TextViewSemiBold
                        android:id="@+id/txtHomeUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_18sdp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.55"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/llPendingCLick"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/padding_5"
                        android:layout_weight="1"
                        android:gravity="center">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:elevation="10dp"
                            app:cardCornerRadius="@dimen/_15sdp">

                            <LinearLayout
                                android:layout_width="180dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="@drawable/button_bg_rounded_corners"
                                android:gravity="center"
                                android:orientation="vertical">

                                <com.luminous.pdi.custom_text_view.TextViewRegular
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center_horizontal"
                                    android:text="@string/tv_dash_pending"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="@dimen/normalTextSize"
                                    android:textStyle="normal" />

                                <com.luminous.pdi.custom_text_view.TextViewSemiBold
                                    android:id="@+id/txtHomePendingCount"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="30dp"
                                    android:gravity="center_horizontal"
                                    android:text="0"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="@dimen/_20sdp"
                                    />

                            </LinearLayout>
                        </androidx.cardview.widget.CardView>


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/llCompletedCLick"

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/padding_5"
                        android:layout_weight="1">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:elevation="10dp"
                            app:cardCornerRadius="@dimen/_15sdp">

                            <LinearLayout
                                android:layout_width="180dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:background="@drawable/button_bg_green_round"
                                android:gravity="center"
                                android:id="@+id/linview_completed"
                                android:orientation="vertical">

                                <com.luminous.pdi.custom_text_view.TextViewRegular
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center_horizontal"
                                    android:text="@string/tv_dash_completed"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="@dimen/normalTextSize"
                                    android:textStyle="normal" />

                                <com.luminous.pdi.custom_text_view.TextViewSemiBold
                                    android:id="@+id/txtHomeCompletedCount"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:layout_centerHorizontal="true"
                                    android:layout_gravity="center"
                                    android:layout_marginTop="30dp"
                                    android:gravity="center_horizontal"
                                    android:text="0"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="@dimen/_20sdp"
                                    />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2"
                    android:orientation="vertical">

                    <com.luminous.pdi.custom_text_view.TextViewSemiBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/tv_upcoming_visit"
                        android:textColor="@color/upcomingVisit"
                        android:layout_marginLeft="5dp"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:background="@drawable/calender_view_rect"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="10dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/dash_recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:nestedScrollingEnabled="false"
                            android:descendantFocusability="blocksDescendants" />

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pbHomeLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>